--- a/portfolio.html
+++ b/portfolio.html
@@ -348,9 +348,9 @@
           <div class="subscription">
             <b class="subscription-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
             <form class="subscription-nav">
-              <input class="subscription-input" type="text" name="E-mail" id="name" placeholder="E-mail  ">
-              <label for="name"></label>
-              <button type="submit" class="subscription-button" >
+              <input class="subscription-input" type="text" name="E-mail" id="subscription" placeholder="E-mail  ">
+              <label for="subscription"></label>
+              <button type="submit" class="primary-button flex-align-center" >
               
                 
                 Подписаться
@@ -376,5 +376,6 @@
 
       </footer>
     </main>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
